# TurnTable

./: README.md
.github/workflows/: cucumber.yml
electronics/TurnTable/: .gitignore  TurnTable.kicad_pcb  TurnTable.sch
mechanics/: assembly.scad
mechanics/centerGuide/: centerGuide.scad  centerGuide.stl
mechanics/drive/: assembly.scad  gearing.scad  gearing_1.3mf  gearing_2.3mf  gearing_3.3mf  gearing_4.3mf  servo.scad
mechanics/gearing/: gear1.stl  gear2  gear2.stl  gears.json  motorHolder.scad  motorHolder.stl
mechanics/lib/: gears  readme
mechanics/mocks/: servo.scad  servo_modified.scad
mechanics/servoHolder/: servoHolder.scad
mechanics/wheelDistance/: wheelDistance.scad  wheelDistance.stl
mechanics/wormGearHolder/: wormGearHolder.scad
software/firmware/: .gitignore  CMakeLists.txt  Dockerfile  platformio.ini  runTests.sh  run_cucumber.sh
software/firmware/features/: Persistency.feature  Turning.feature
software/firmware/features/steps/: Persistency__steps.cpp  Turning__steps.cpp
software/firmware/features/steps/mocks/: Arduino.cpp  Arduino.h
software/firmware/include/: Drive.h
software/firmware/lib/sources/: Persistency.cpp  Persistency.h
software/firmware/src/: Drive.cpp  Drive.h  RemoteControl.cpp  RemoteControl.h  main.cpp
software/firmware/test/: Dockerfile  Drive_test.cpp  RemoteControl_test.cpp  docker-compose.yml  makefile
software/firmware/test/mocks/: Arduino.cpp  Arduino.h  ArduinoBLE.cpp  ArduinoBLE.h
software/firmware/unit_tests/: .gitignore  Persistency_test.cpp  main.cpp
software/firmware/unit_tests/mocks/: Arduino.h
software/firmware/unit_tests/tests/: RemoteControl_test.cpp
